--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           base-image: ajoergensen/baseimage-alpine:latest
           image: saltiresoul/archive-dovecot:latest
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
 
   build-docker-images:
     needs: check
