--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -15,8 +15,8 @@ jobs:
         
         uses: ClementTsang/docker-check-base-image-diff@v0.0.2
         with:
-          base-image: ajoergensen/baseimage-alpine:latest
-          derived-image: saltiresoul/archive-dovecot:latest
+          base-image: docker://ajoergensen/baseimage-alpine:latest
+          derived-image: docker://saltiresoul/archive-dovecot:latest
 
       - name: check for any update
         run: echo "${{steps.check.outputs.differs}}"
