--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -21,37 +21,14 @@ jobs:
       - name: check for any update
         run: echo "${{steps.check.outputs.differs}}"
 
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - name: Dump job context
-        env:
-          JOB_CONTEXT: ${{ toJson(job) }}
-        run: echo "$JOB_CONTEXT"
-      - name: Dump steps context
-        env:
-          STEPS_CONTEXT: ${{ toJson(steps) }}
-        run: echo "$STEPS_CONTEXT"
-      - name: Dump runner context
-        env:
-          RUNNER_CONTEXT: ${{ toJson(runner) }}
-        run: echo "$RUNNER_CONTEXT"
-      - name: Dump strategy context
-        env:
-          STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-        run: echo "$STRATEGY_CONTEXT"
-      - name: Dump matrix context
-        env:
-          MATRIX_CONTEXT: ${{ toJson(matrix) }}
-        run: echo "$MATRIX_CONTEXT"
-        #run: echo '${{ toJSON(github) }}'
+      - name: Check result
+        run: echo "Needs updating: ${{ steps.check.outputs.needs-updating }}"
 
   build-docker-images:
     needs: check
     name: Build Docker Images
     runs-on: ubuntu-latest
-    if: needs.check.outputs.differs == 'true'
+    if: needs.check.outputs.needs-updating == 'true'
     permissions:
       packages: write
       contents: read
